# CO2nvert

./: LICENSE  README.md  run_app.bat
backend/: .gitignore  check_db.py  main.py  pyproject.toml  requirements.txt  seed_factors.py
backend/app/: database.py  main.py  seed_factors.py
backend/app/api/: batches.py  dashboard.py  documents.py  emissions.py  extraction.py  reports.py  upload.py
backend/app/models/: __init__.py  activity.py  batch.py  dashboard.py  document.py  emission.py  emission_category.py  emission_factor.py  report.py
backend/app/schemas/: activity_schema.py  batch_schema.py  document_schema.py
backend/app/services/: ai_extractor.py  ai_report_writer.py  carbon_calculator.py  file_handler.py  report_charts.py  report_generator.py  text_extractor.py
backend/app/templates/: report.html
frontend/: package-lock.json
frontend/CO2nvert/: index.html  package-lock.json  package.json
frontend/CO2nvert/src/: App.tsx  DataContext.tsx  main.tsx
frontend/CO2nvert/src/features/analytics/: ReportPreview.tsx
frontend/CO2nvert/src/features/dashboard/: ActionSelection.tsx  Dashboard.tsx  HistoryTable.tsx
frontend/CO2nvert/src/features/upload/: InvoiceUploader.tsx  ProcessBatch.tsx
frontend/CO2nvert/src/layouts/: MainLayout.tsx
frontend/src/: App.tsx
frontend/src/types/: index.ts
